docs/apache-airflow-providers-google/8.3.0/_sources/_api/tests/system/providers/google/cloud/gcs/example_s3_to_gcs/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.gcs.example_s3_to_gcs`
===================================================================

.. py:module:: tests.system.providers.google.cloud.gcs.example_s3_to_gcs


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.upload_file



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.ENV_ID
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.GCP_PROJECT_ID
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.DAG_ID
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.BUCKET_NAME
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.GCS_BUCKET_URL
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.UPLOAD_FILE
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.PREFIX
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.create_s3_bucket
   tests.system.providers.google.cloud.gcs.example_s3_to_gcs.test_run


.. py:data:: ENV_ID
   

   

.. py:data:: GCP_PROJECT_ID
   

   

.. py:data:: DAG_ID
   :annotation: = example_s3_to_gcs

   

.. py:data:: BUCKET_NAME
   

   

.. py:data:: GCS_BUCKET_URL
   

   

.. py:data:: UPLOAD_FILE
   :annotation: = /tmp/example-file.txt

   

.. py:data:: PREFIX
   :annotation: = TESTS

   

.. py:function:: upload_file()

   A callable to upload file to AWS bucket


.. py:data:: create_s3_bucket
   

   

.. py:data:: test_run
   

   

